--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,8 @@
     "axios": "^1.12.0",
     "framer-motion": "^10.18.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^7.8.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
