--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "express-session": "^1.18.2",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "~1.9.1",
     "mysql2": "^3.14.5",
     "nodemon": "^3.1.10",
